--- a/styles/payment.css
+++ b/styles/payment.css
@@ -2,3 +2,21 @@
     height:500px;
     width: 500px;;
 }
+
+#payment-hotel{
+    height:20%;
+    width: 50%;
+    background-color: peru;
+    margin:auto;
+    padding-top:2%;
+    padding-bottom:2%;
+}
+#payment-details{
+    margin:2%;
+}
+#tariff{
+    margin:2%;
+    border: 2px solid black;
+    padding: 1% 2%;
+    border-radius: 5px;
+}
