--- a/styles/payment.css
+++ b/styles/payment.css
@@ -6,9 +6,9 @@
 #payment-hotel{
     height:20%;
     width: 50%;
-    background-color: peru;
+    background-color: rgb(132,136,139);
     margin:auto;
-    padding-top:2%;
+    margin-top: 2%;
     padding-bottom:2%;
 }
 #payment-details{
