--- a/styles/common.css
+++ b/styles/common.css
@@ -16,41 +16,24 @@ main{
     height:60px;
     width: 60px;
     border-radius: 50%;
+    margin-left: 1%;
 }
 #login{
-    text-align: right;
-    float:right;
-    padding-top:1.2%;
-    padding-right: 1%;
+    margin-right: 2%;
+}
 
-}
-.city-img{
-    height: 150px;
-    width: 150px;
-}
 footer img{
     height:20px;
     width: 22px;
 }
 #contact{
-    vertical-align: middle;
-    float:left;
-    padding-left:1%;
-    padding-top: 1.5%;
+   margin-left: 2%;
 }
 #social{
-    
-    float:right;
-    vertical-align: middle;
-    padding-right:1%;
+    order:1;
+    margin-right:2%;
 }
-#copyright{
 
-    margin:auto;
-    width:fit-content;
-    vertical-align:bottom;
-    padding-top:1%;
-}
 footer{
     position: fixed;
     bottom:0;
@@ -59,6 +42,10 @@ footer{
     width: 100%;
     background-color: rosybrown;
     height:8vmin;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header{
@@ -67,6 +54,10 @@ header{
     width: 100%;
     background-color: rosybrown;
     height: 8vmin;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 a{
