--- a/styles/detail.css
+++ b/styles/detail.css
@@ -16,3 +16,57 @@ table th{
     margin:0% 4% 2% 4%;
     padding-bottom: 2%;
 }
+#detail-box{
+    height:400px;
+    max-height: 400px;
+    margin:4% 2%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border: 1px solid black;
+    justify-content: center;
+}
+#detail-box > *:first-child{
+    max-height: 400px;
+    margin:1% 0;
+    flex-grow: 4;
+    background-image: url("https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+#detail-box > *:last-child{
+    max-height:400px;
+    margin: 1% 0;
+    flex-grow: 1;
+    margin: 0 auto;
+    border-left: 1px solid black;
+}
+form div{
+    padding: 0 4%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+form input{
+    width:60%;
+    height:fit-content;
+}
+#book-btn{
+    align-self: center;
+}
+#book{
+    padding: 4% 0;
+}
+form{
+    height:100%;
+    max-height: 400px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+h3, h4{
+    font-family: cursive;
+}
