--- a/styles/index.css
+++ b/styles/index.css
@@ -21,23 +21,64 @@
     font-size: 16px;
     width:100%;
 }
+
+#city:focus{
+    outline:none;
+}
+
 #citycards{
-    
-    padding-left:15%;
-    margin-left: auto;
-    margin-right: auto;
-    height:min-content;
+    height:100%;
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding:4% 0;
 }
-#citycards img{
-    padding:4%;
+#citycards div{
+    height: 200px;
+    width: 200px;
     border-radius: 25%;
+    box-shadow: 10px 10px 10px grey;
 }
+
+#delhi-img{
+    background: url("https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg");
+    background-size: 200px 200px;
+}
+#goa-img{
+    background: url("https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg");
+    background-size: 200px 200px;
+    
+}
+#charminar-img{
+    background: url("https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg");
+    background-size: 200px 200px;
+}
+#calcutta-img{
+    background: url("https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg");
+    background-size: 200px 200px;
+}
+
+.card-overlay{
+    display: none;
+    background-color: rgba(0, 0, 0, 0.5);
+    color:#f1f1f1;
+    text-align: center;
+    line-height: 200px;
+}
+#citycards div:hover .card-overlay{
+    display: block;
+}
+
 #content{
-    overflow: auto;
     height: 100vh;
     width:100%;
+    display: flex;
+    flex-direction: column;
 }
 #view-more{
     margin:0 auto;
     width: max-content;
+    padding-bottom: 4%;
 }
