--- a/styles/payment.css
+++ b/styles/payment.css
@@ -1,22 +1,52 @@
 .payment-img{
-    height:500px;
-    width: 500px;;
+    height:270px;
+    width: 300px;;
 }
 
 #payment-hotel{
-    height:20%;
-    width: 50%;
-    background-color: rgb(132,136,139);
+    height:fit-content;
+    width:50%;
+    display:flex;
+    background-color: rgb(132, 136, 139);
     margin:auto;
-    margin-top: 2%;
-    padding-bottom:2%;
+    /* margin-top: 2%; */
+    /* padding-bottom:2%; */
 }
-#payment-details{
-    margin:2%;
+
+#payment-hotel div{
+    margin-left: 4%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-#tariff{
-    margin:2%;
-    border: 2px solid black;
-    padding: 1% 2%;
+
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+h2, h3, h4{
+    font-family: cursive;
+}
+span{
+    padding-bottom: 1%;
+}
+#bill{
+    background-color: rosybrown;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin:0 2%;
+    margin-bottom:4%;
+    padding: 1% 0;
+    border: 1px solid black;
     border-radius: 5px;
+}
+#bill span{
+    padding-bottom:0;
+    font-family: cursive;
+    font-weight: bold;
 }
