--- a/styles/list.css
+++ b/styles/list.css
@@ -22,8 +22,12 @@
     padding:0;
     padding-inline-start:0;
 }
+#list-view{
+    height:100vh;
+}
 #map-view{
-    display: none;
+    height:100vh;
+    width:100%;
 }
 
 #rad-card{
