--- a/styles/common.css
+++ b/styles/common.css
@@ -64,6 +64,7 @@ header{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    z-index:2;
 }
 
 a{
@@ -82,4 +83,8 @@ a:hover{
 }
 #contact-btn{
     margin-top: 4%;
+}
+
+.star-rate{
+    color:orange;
 }
