--- a/styles/common.css
+++ b/styles/common.css
@@ -37,7 +37,7 @@ footer img{
     margin-right:2%;
     display: flex;
     justify-content: space-between;
-    width:6%;
+    /* width:6%; */
 }
 
 footer{
@@ -87,4 +87,39 @@ a:hover{
 
 .star-rate{
     color:orange;
+}
+
+
+/* Media queries */
+@media only screen and (max-width:575px ){
+    header{
+        height:10%;
+    }
+    footer{
+        height:8%;
+    }
+    #content{
+        margin-top:10%;
+        margin-bottom:10%;
+    }
+    #copyright{
+        font-size: 11px;
+        margin:auto;
+    }
+    #contact{
+        margin-left:0;
+        height:80%;
+        width: 20%;
+        font-size: 12px;
+        padding:0;
+    }
+    main{
+        padding-top:4%;
+        padding-bottom:8%;
+        box-sizing: border-box;
+    }
+}
+
+@media only screen and (min-width:576px) and (max-width: 767px){
+    
 }
