--- a/styles/common.css
+++ b/styles/common.css
@@ -98,10 +98,10 @@ a:hover{
     footer{
         height:8%;
     }
-    #content{
+    /* #content{
         margin-top:10%;
         margin-bottom:10%;
-    }
+    } */
     #copyright{
         font-size: 11px;
         margin:auto;
@@ -112,14 +112,9 @@ a:hover{
         width: 20%;
         font-size: 12px;
         padding:0;
-    }
-    main{
-        padding-top:4%;
-        padding-bottom:8%;
-        box-sizing: border-box;
-    }
+    }    
 }
 
-@media only screen and (min-width:576px) and (max-width: 767px){
-    
-}
+/* @media only screen and (min-width:576px) and (max-width: 767px){
+
+} */
