--- a/styles/list.css
+++ b/styles/list.css
@@ -1,3 +1,4 @@
+
 #list-view img{
     height:200px;
     width: 250px;
@@ -15,7 +16,7 @@
 
 #list{
     width: fit-content;
-    margin:auto;
+    margin: 2% auto;
 }
 #list ul{
     padding:0;
@@ -58,3 +59,82 @@
     object-fit: cover;
 }
 
+/* Media Queries */
+@media only screen and (max-width: 575px ){
+    #list-view{
+        display:flex;
+        flex-direction: column;
+        width:100%;
+        height: 100%;
+        justify-content: space-around;
+        align-items: center;
+    }
+    main{
+        margin-top:10%;
+        overflow: auto;
+    }
+    main > div:first-child{
+        margin-bottom: 8%;
+        padding-bottom: 15%;
+    }
+    .hotel-card{
+        flex-direction: column;
+        float:none;
+        width: 100%;
+        flex-wrap: nowrap;
+
+    }
+    .hotel-desc{
+        width:100%; 
+    }
+
+    #list-view img{
+        height:200px;
+        width: 100%;
+    }
+    #list-view > div{
+        margin:2%;
+        width:90%;
+    }
+}
+
+@media only screen and (min-width:576px) and (max-width: 768px){
+    #list-view{
+        display:flex;
+        flex-direction: column;
+        width:100%;
+        height: 100%;
+        justify-content: space-around;
+        align-items: center;
+    }
+    main{
+        margin-top:10%;
+        overflow: auto;
+    }
+    main > div:first-child{
+        margin-bottom: 8%;
+        padding-bottom: 15%;
+    }
+    .hotel-card{
+        flex-direction: row;
+        justify-content: center;
+        float:none;
+        width: 100%;
+        flex-wrap: nowrap;
+    }
+    .hotel-desc{
+        width:100%; 
+    }
+
+    .hotel-card > div:first-child{
+        width:70%;
+    }
+    #list-view img{
+        height:200px;
+        width: 100%;
+    }
+    #list-view > div{
+        margin:2%;
+        width:90%;
+    }
+}
