--- a/styles/list.css
+++ b/styles/list.css
@@ -62,12 +62,8 @@
 /* Media Queries */
 @media only screen and (max-width: 575px ){
     #list-view{
-        display:flex;
-        flex-direction: column;
         width:100%;
         height: 100%;
-        justify-content: space-around;
-        align-items: center;
     }
     main{
         margin-top:10%;
@@ -96,16 +92,23 @@
         margin:2%;
         width:90%;
     }
+    #map-view{
+        display: flex;
+        height:100%;
+        width: 100%;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+    #lalit-card{
+        float: none;
+        margin:auto;
+    }
 }
 
 @media only screen and (min-width:576px) and (max-width: 768px){
-    #list-view{
-        display:flex;
-        flex-direction: column;
+    #list-view{   
         width:100%;
         height: 100%;
-        justify-content: space-around;
-        align-items: center;
     }
     main{
         margin-top:10%;
@@ -136,5 +139,16 @@
     #list-view > div{
         margin:2%;
         width:90%;
+    }
+    #map-view{
+        display: flex;
+        height:100%;
+        width: 100%;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+    #lalit-card{
+        float: none;
+        margin:auto;
     }
 }
