--- a/styles/index.css
+++ b/styles/index.css
@@ -1,146 +1,155 @@
-#search-bar-img{
-    background:url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg");
-    background-size:cover;
-    height:380px;
-    width:100%;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-#search-bar{
-    margin: auto;
-    width:28%;
-    padding-top: 165px;
-    padding-bottom: 165px;
-    display: flex;
-    justify-content: stretch;
-    position: relative;
+#search-bar-img {
+  background: url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg");
+  background-size: cover;
+  height: 380px;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-#city{
-    background-color: #f1f1f1;
-    border: 1px solid transparent;
-    padding:10px;
-    border-radius: 12px ;
-    font-size: 16px;
-    width:100%;
+#search-bar {
+  margin: auto;
+  width: 28%;
+  padding-top: 165px;
+  padding-bottom: 165px;
+  display: flex;
+  justify-content: stretch;
+  position: relative;
 }
 
-#city:focus{
-    outline:none;
+#city {
+  background-color: #f1f1f1;
+  border: 1px solid transparent;
+  padding: 10px;
+  border-radius: 12px ;
+  font-size: 16px;
+  width: 100%;
 }
 
-#citycards{
-    height:100%;
-    display: flex;
-    width: 100%;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    padding:4% 0;
-}
-#citycards div{
-    height: 200px;
-    width: 200px;
-    border-radius: 25%;
-    box-shadow: 10px 10px 10px grey;
+#city:focus {
+  outline:none;
 }
 
-#delhi-img{
-    background: url("https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg");
-    background-size: 200px 200px;
+#citycards {
+  height: 100%;
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 4% 0;
 }
-#goa-img{
-    background: url("https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg");
-    background-size: 200px 200px;
-    
+
+#citycards div {
+  height: 200px;
+  width: 200px;
+  border-radius: 25%;
+  box-shadow: 10px 10px 10px grey;
 }
+
+#delhi-img {
+  background: url("https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg");
+  background-size: 200px 200px;
+}
+
+#goa-img {
+  background: url("https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg");
+  background-size: 200px 200px;
+}
+
 #charminar-img{
-    background: url("https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg");
-    background-size: 200px 200px;
+  background: url("https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg");
+  background-size: 200px 200px;
 }
+
 #calcutta-img{
-    background: url("https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg");
-    background-size: 200px 200px;
+  background: url("https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg");
+  background-size: 200px 200px;
 }
 
 .card-overlay{
-    display: none;
-    background-color: rgba(0, 0, 0, 0.5);
-    color:#f1f1f1;
-    text-align: center;
-    line-height: 200px;
-}
-#citycards div:hover .card-overlay{
-    display: block;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  text-align: center;
+  line-height: 200px;
 }
 
-#content{
-    /* height: 100vmin; */
-    /* position: relative; */
-    width:100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* justify-content: center; */
+#citycards div:hover .card-overlay {
+  display: block;
 }
-#view-more{
-    margin:0 auto;
-    width: max-content;
-    padding-bottom: 4%;
+
+#content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#view-more {
+  margin: 0 auto;
+  width: max-content;
+  padding-bottom: 4%;
 }
 
 /* Media Queries */
 
- @media only screen and (max-width:576px ){
-    #search-bar-img{
-        top: 0;
-        /* height: 50vh; */
-        width:100%;
-        display:flex;
-        justify-content: center;
-        align-items: center;
-    }
-    main{
-        padding-top:4%;
-        padding-bottom:8%;
-        box-sizing: border-box;
-    }
-    #search-bar{
-        width:40vw;
-        margin: auto;
-    }
-    #citycards{
-        flex-direction: column;
-        justify-content: space-around;
-        height:max-content;
-        flex-wrap: nowrap;
-    }
-    #citycards > div{
-        margin: 10% 0;
-    }
-    #content{
-        margin-top:10%;
-        margin-bottom:10%;
-    }
+/* Small screens */
+ @media only screen and (max-width:576px) {
+  #search-bar-img {
+    top: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  main {
+    padding-top: 4%;
+    padding-bottom: 8%;
+    box-sizing: border-box;
+  }
+
+  #search-bar {
+    width: 40vw;
+    margin: auto;
+  }
+
+  #citycards {
+    flex-direction: column;
+    justify-content: space-around;
+    height: max-content;
+    flex-wrap: nowrap;
+  }
+
+  #citycards > div {
+    margin: 10% 0;
+  }
+
+  #content{
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
 }
 
-@media only screen and (min-width:576px) and (max-width: 768px){
-    #citycards{
-        display:grid;
-        width:100%;
-        grid-template-columns: repeat(2, 1fr);
-        grid-auto-rows: 200px;
-        grid-row-gap: 10%;
-        justify-items: center;
-    }
-    
-    #content{
-        /* margin-top:10%; */
-        margin-bottom:10%;
-    }
-    #view-more{
-        padding-bottom: 0;
-        background: chartreuse;
-        margin-top:20%;
-    }
+/* Medium sized screens */
+@media only screen and (min-width:576px) and (max-width: 768px) {
+  #citycards {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 200px;
+    grid-row-gap: 10%;
+    justify-items: center;
+  }
+
+  #content {
+    margin-bottom: 10%;
+  }
+
+  #view-more {
+    padding-bottom: 0;
+    background: chartreuse;
+    margin-top: 20%;
+  }
 }
