--- a/styles/list.css
+++ b/styles/list.css
@@ -1,154 +1,173 @@
-
-#list-view img{
-    height:200px;
-    width: 250px;
+#list-view img {
+  height: 200px;
+  width: 250px;
 }
 
-#list-view > div{
-    margin:2%;
-    background-color: lightgrey;
-    width:40%;
+#list-view > div {
+  margin: 2%;
+  background-color: lightgrey;
+  width: 40%;
 }
 
-#list-view >div:hover{
-    background: rosybrown;
+#list-view > div:hover {
+  background: rosybrown;
 }
 
-#list{
-    width: fit-content;
-    margin: 2% auto;
-}
-#list ul{
-    padding:0;
-    padding-inline-start:0;
-}
-#list-view{
-    height:100vh;
-}
-#map-view{
-    height:100vh;
-    width:100%;
+#list {
+  width: fit-content;
+  margin: 2% auto;
 }
 
-#rad-card{
-    float : left;
-}
-#lalit-card{
-    float : right;
-}
-#taj-card{
-    float:left;
+#list ul {
+  padding: 0;
+  padding-inline-start: 0;
 }
 
-.hotel-card div{
-    margin:0;
+#list-view {
+  height: 100vh;
 }
 
-.hotel-card{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    flex-wrap: wrap;
+#map-view {
+  height: 100vh;
+  width: 100%;
 }
 
-.hotel-card > *:last-child{
-    margin-left: 2%;
+#rad-card {
+  float : left;
 }
 
-.hotel-card div:first-child{
-    object-fit: cover;
+#lalit-card {
+  float : right;
+}
+
+#taj-card {
+  float: left;
+}
+
+.hotel-card div {
+  margin: 0;
+}
+
+.hotel-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
+.hotel-card > *:last-child {
+  margin-left: 2%;
+}
+
+.hotel-card div:first-child {
+  object-fit: cover;
 }
 
 /* Media Queries */
-@media only screen and (max-width: 575px ){
-    #list-view{
-        width:100%;
-        height: 100%;
-    }
-    main{
-        margin-top:10%;
-        overflow: auto;
-    }
-    main > div:first-child{
-        margin-bottom: 8%;
-        padding-bottom: 15%;
-    }
-    .hotel-card{
-        flex-direction: column;
-        float:none;
-        width: 100%;
-        flex-wrap: nowrap;
 
-    }
-    .hotel-desc{
-        width:100%; 
-    }
+/* Small screens */
+@media only screen and (max-width: 575px) {
+  #list-view {
+    width: 100%;
+    height: 100%;
+  }
 
-    #list-view img{
-        height:200px;
-        width: 100%;
-    }
-    #list-view > div{
-        margin:2%;
-        width:90%;
-    }
-    #map-view{
-        display: flex;
-        height:100%;
-        width: 100%;
-        flex-direction: column;
-        justify-content: flex-start;
-    }
-    #lalit-card{
-        float: none;
-        margin:auto;
-    }
+  main {
+    margin-top: 10%;
+    overflow: auto;
+  }
+
+  main > div:first-child {
+    margin-bottom: 8%;
+    padding-bottom: 15%;
+  }
+
+  .hotel-card {
+    flex-direction: column;
+    float: none;
+    width: 100%;
+    flex-wrap: nowrap;
+  }
+
+  .hotel-desc {
+    width: 100%; 
+  }
+
+  #list-view img {
+    height: 200px;
+    width: 100%;
+  }
+
+  #list-view > div {
+    margin: 2%;
+    width: 90%;
+  }
+
+  #map-view {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  #lalit-card {
+    float: none;
+    margin:auto;
+  }
 }
 
-@media only screen and (min-width:576px) and (max-width: 768px){
-    #list-view{   
-        width:100%;
-        height: 100%;
-    }
-    main{
-        margin-top:10%;
-        overflow: auto;
-    }
-    main > div:first-child{
-        margin-bottom: 8%;
-        padding-bottom: 15%;
-    }
-    .hotel-card{
-        flex-direction: row;
-        justify-content: center;
-        float:none;
-        width: 100%;
-        flex-wrap: nowrap;
-    }
-    .hotel-desc{
-        width:100%; 
-    }
+/* Medium sized screens */
+@media only screen and (min-width:576px) and (max-width: 768px) {
+  #list-view {   
+    width: 100%;
+    height: 100%;
+  }
 
-    .hotel-card > div:first-child{
-        width:70%;
-    }
-    #list-view img{
-        height:200px;
-        width: 100%;
-    }
-    #list-view > div{
-        margin:2%;
-        width:90%;
-    }
-    #map-view{
-        display: flex;
-        height:100%;
-        width: 100%;
-        flex-direction: column;
-        justify-content: flex-start;
-    }
-    #lalit-card{
-        float: none;
-        margin:auto;
-    }
+  main {
+    margin-top: 10%;
+    overflow: auto;
+  }
+
+  main > div:first-child {
+    margin-bottom: 8%;
+    padding-bottom: 15%;
+  }
+
+  .hotel-card {
+    flex-direction: row;
+    justify-content: center;
+    float: none;
+    width: 100%;
+    flex-wrap: nowrap;
+  }
+
+  .hotel-desc {
+    width: 100%; 
+  }
+
+  .hotel-card > div:first-child {
+    width: 70%;
+  }
+  #list-view img {
+    height: 200px;
+    width: 100%;
+  }
+  #list-view > div {
+    margin: 2%;
+    width: 90%;
+  }
+
+  #map-view {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  #lalit-card {
+    float: none;
+    margin: auto;
+  }
 }
