--- a/styles/index.css
+++ b/styles/index.css
@@ -31,13 +31,17 @@
 }
 
 #citycards {
-  height: 100%;
-  display: flex;
+  height: 100vh;
+  display: grid;
   width: 100%;
-  flex-direction: row;
-  justify-content: space-evenly;
+  grid-template-columns: repeat(4, minmax(200px, 1fr));
+  grid-auto-rows: 200px;
+  /* flex-direction: row; */
+  justify-items: center;
   align-items: center;
-  padding: 4% 0;
+  grid-row-gap: 20%;
+  padding: 10% 0;
+  /* padding-bottom: 10%; */
 }
 
 #citycards div {
@@ -67,9 +71,29 @@
   background-size: 200px 200px;
 }
 
+#chennai-img{
+  background: url("https://media-cdn.tripadvisor.com/media/photo-s/15/4d/46/b8/chennai-madras.jpg");
+  background-size: 200px 200px;
+}
+
+#agra-img{
+  background: url("https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/fc/agra.jpg");
+  background-size: 200px 200px;
+}
+
+#jaipur-img{
+  background: url("https://media-cdn.tripadvisor.com/media/photo-s/10/a3/3b/8a/screenshot-2017-09-12.jpg");
+  background-size: 200px 200px;
+}
+
+#bengaluru-img{
+  background: url("https://media-cdn.tripadvisor.com/media/photo-s/0c/d2/2f/7a/palace-from-the-outside.jpg");
+  background-size: 200px 200px;
+}
+
 .card-overlay{
   display: none;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(90, 87, 87, 0.5);
   color: #f1f1f1;
   text-align: center;
   line-height: 200px;
@@ -108,6 +132,8 @@
     padding-top: 4%;
     padding-bottom: 8%;
     box-sizing: border-box;
+    height: 100%;
+    overflow: auto;
   }
 
   #search-bar {
@@ -116,10 +142,15 @@
   }
 
   #citycards {
-    flex-direction: column;
-    justify-content: space-around;
-    height: max-content;
-    flex-wrap: nowrap;
+    display: grid;
+    grid-template-columns: 200px;
+    grid-auto-rows: 200px;
+    grid-row-gap: 4% ;
+    padding:4% 0;
+    height: 350vh;
+    justify-content: center;
+    align-items: center;
+    padding: 10% 0;
   }
 
   #citycards > div {
