--- a/styles/list.css
+++ b/styles/list.css
@@ -70,6 +70,9 @@
   #list-view {
     width: 100%;
     height: 100%;
+    /* The following two lines create the problem  ( Same for the media queries for medium screens ) */
+    display:flex;
+    flex-direction: column;
   }
 
   main {
@@ -122,6 +125,9 @@
   #list-view {   
     width: 100%;
     height: 100%;
+    /* The following two lines create the problem */
+    display:flex;
+    flex-direction: column;
   }
 
   main {
