--- a/styles/index.css
+++ b/styles/index.css
@@ -31,7 +31,7 @@
 }
 
 #citycards {
-  height: 100vh;
+  height: max-content;
   display: grid;
   width: 100%;
   grid-template-columns: repeat(4, minmax(200px, 1fr));
@@ -114,6 +114,10 @@
   margin: 0 auto;
   width: max-content;
   padding-bottom: 4%;
+}
+
+.card-set-2{
+  display:none;
 }
 
 /* Media Queries */
