--- a/styles/index.css
+++ b/styles/index.css
@@ -66,7 +66,7 @@
   background-size: 200px 200px;
 }
 
-#calcutta-img{
+#kolkata-img{
   background: url("https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg");
   background-size: 200px 200px;
 }
